Change top paddings for description div to eliminate space between face photo and description at smaller screen heights. Also use media query to prevent text overflow of description on mobile.

--- a/css/base.css
+++ b/css/base.css
@@ -59,7 +59,7 @@ h5 {
     background: #d1e0e0;
 }
 
-@media only screen and (max-width: 768px) {
+@media (max-width: 768px) {
     .navbar-nav {
         margin: 7.5px 0px;
     }
